Adding server and client logic so that messages are now sent to the server, which broadcast them to all connected clients. Further, adding the ability for users to change their username. This event is registered onChange, calling a function in App.jsx which updates the username state based on the value of the changed input.

--- a/chatty_server/package.json
+++ b/chatty_server/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/distal-shores/chatty-app#readme",
   "dependencies": {
     "express": "4.15.3",
+    "uuid": "3.1.0",
     "ws": "3.1.0"
   }
 }
