--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "css-loader": "0.26.1",
     "eslint": "3.15.0",
     "eslint-plugin-react": "6.9.0",
+    "file-loader": "0.11.2",
     "node-sass": "4.5.0",
     "sass-loader": "6.0.0",
     "sockjs-client": "^1.1.2",
     "style-loader": "0.13.1",
+    "url-loader": "0.5.9",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
   },
